// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > should render correctly 1`] = `
<div
  data-testid="button"
>
  <button
    class="ci-btn ci-btn-default ci-btn-md"
    type="button"
  >
    <span>
      default
    </span>
  </button>
  <button
    class="ci-btn ci-btn-primary ci-btn-md"
    type="button"
  >
    <span>
      primary
    </span>
  </button>
  <button
    class="ci-btn ci-btn-info ci-btn-md"
    type="button"
  >
    <span>
      info
    </span>
  </button>
  <button
    class="ci-btn ci-btn-warning ci-btn-md"
    type="button"
  >
    <span>
      warning
    </span>
  </button>
  <button
    class="ci-btn ci-btn-danger ci-btn-md"
    type="button"
  >
    <span>
      danger
    </span>
  </button>
  <button
    class="ci-btn ci-btn-dashed ci-btn-md"
    type="button"
  >
    <span>
      dashed
    </span>
  </button>
  <button
    class="ci-btn ci-btn-text ci-btn-md"
    type="button"
  >
    <span>
      text
    </span>
  </button>
</div>
`;

exports[`Button > should render different sizes correctly 1`] = `
<div
  data-testid="button_size"
>
  <button
    class="ci-btn ci-btn-primary ci-btn-lg"
    type="button"
  >
    <span>
      lg
    </span>
  </button>
  <button
    class="ci-btn ci-btn-primary ci-btn-md"
    type="button"
  >
    <span>
      md
    </span>
  </button>
  <button
    class="ci-btn ci-btn-primary ci-btn-sm"
    type="button"
  >
    <span>
      sm
    </span>
  </button>
</div>
`;
